# flutter_m1_patcher

./: Cargo.toml  README-ZH.md  README.md
src/: downloader.rs  main.rs
