[package]
name = "flutter_m1_patcher"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1"
reqwest = { version = "0.11", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"


[profile.release]
opt-level = 'z'
panic = 'unwind'
lto = true
codegen-units = 1